# aoc2022

./: .gitignore  README.md  pyproject.toml  tests.sh
day01/: __main__.py  test_day01.py
day02/: __main__.py  test_day02.py
day03/: __main__.py  test_day03.py
day04/: __main__.py  test_day04.py
day05/: __main__.py  test_day05.py
day06/: __main__.py  test_day06.py
day07/: __main__.py  test_day07.py
day08/: __main__.py  test_day08.py
day09/: __main__.py  test_day09.py
day10/: __main__.py  test_day10.py
day11/: __main__.py  test_day11.py
day12/: __main__.py  test_day12.py
day13/: __main__.py  test_day13.py
day14/: __main__.py  test_day14.py
day15/: __main__.py  test_day15.py
shared/: __init__.py  crane.py  patrols.py  rps.py  rucksack.py  test_crane.py  test_patrols.py  test_rps.py  test_rucksack.py  test_shared.py
