[tool.poetry]
name = "aoc2022"
version = "0.1.0"
description = ""
authors = ["Scott Odle <scott@sjodle.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pyfakefs = "^5.0.0"
networkx = "^2.8.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
